# FinSense

./: .env.example  .gitignore  001_initial_schema.py  README.md  __init__.py  config.py  conftest.py  database.py  docker-compose.yml  env.py  finsense_er_diagram.mermaid  init-db.sh  lessons.md  model_registry.py  predictions.py  pyproject.toml  raw_prices.py  setup-phase1.ps1  technical_indicators.py  todo.md
.github/workflows/: backend-ci.yml
backend/: alembic.ini  backtest_report.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_economic_indicators.py  003_model_safety_constraints.py
backend/src/: config.py  database.py
backend/src/api/: dependencies.py  main.py  schemas.py
backend/src/api/routes/: pipeline.py  portfolio.py  predict.py  stocks.py
backend/src/dags/: finsense_pipeline.py
backend/src/features/: __init__.py  lag_features.py  pipeline.py  sentiment.py  technical.py
backend/src/ingestion/: __init__.py  data_quality.py  economic_fetcher.py  kafka_consumer.py  kafka_producer.py  stock_fetcher.py
backend/src/ml/: __init__.py  backtester.py  data_prep.py  eda.py  predictor.py  registry.py  run_backtest.py  trainer.py
backend/tests/test_api/: test_auth.py  test_auth_integration.py  test_endpoints.py  test_security_integration.py
backend/tests/test_features/: test_lag_features.py  test_sentiment.py  test_technical.py
backend/tests/test_ingestion/: test_data_quality.py  test_economic_fetcher.py  test_kafka.py  test_stock_fetcher.py
backend/tests/test_ml/: test_predictor.py  test_trainer.py
docs/: alert-rules.yml  alertmanager.yml  api-spec.md  architecture.md  operations-runbook.md  prometheus.yml  setup.md
frontend/: package.json
frontend/src/app/: ThemeRegistry.tsx  layout.tsx  page.tsx
frontend/src/app/pipeline/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/predictions/: page.tsx
frontend/src/components/cards/: ModelPerformanceCard.tsx  PipelineStatusCard.tsx  StockCard.tsx
frontend/src/components/charts/: StockChart.tsx
frontend/src/components/common/: EmptyState.tsx  ErrorState.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/skeletons/: CardSkeleton.tsx  ChartSkeleton.tsx  TableSkeleton.tsx
frontend/src/hooks/: usePipelineStatus.ts  usePortfolioRisk.ts  usePredictions.ts  useStocks.ts
frontend/src/lib/: api.ts  queryClient.ts  validators.ts
frontend/src/theme/: finsenseMidnight.ts
frontend/src/types/: index.ts
scripts/: init-db.sh
tasks/: lessons.md  todo.md
