[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finsense"
version = "0.1.0"
description = "Real-time financial data pipeline with ML predictions"
requires-python = ">=3.12"
dependencies = [
    # 芒鈥濃偓芒鈥濃偓 Database 芒鈥濃偓芒鈥濃偓
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",

    # 芒鈥濃偓芒鈥濃偓 Data Ingestion 芒鈥濃偓芒鈥濃偓
    "yfinance>=0.2.36",
    "fredapi>=0.5.2",
    "confluent-kafka>=2.3.0",

    # 芒鈥濃偓芒鈥濃偓 Data Processing 芒鈥濃偓芒鈥濃偓
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # 芒鈥濃偓芒鈥濃偓 ML 芒鈥濃偓芒鈥濃偓
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "optuna>=3.5.0",

    # 芒鈥濃偓芒鈥濃偓 NLP / Sentiment 芒鈥濃偓芒鈥濃偓
    "transformers>=4.37.0",
    "torch>=2.2.0",

    # 芒鈥濃偓芒鈥濃偓 API 芒鈥濃偓芒鈥濃偓
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # 芒鈥濃偓芒鈥濃偓 Caching 芒鈥濃偓芒鈥濃偓
    "redis>=5.0.0",

    # 芒鈥濃偓芒鈥濃偓 Orchestration 芒鈥濃偓芒鈥濃偓
    "apache-airflow>=2.8.0",

    # 芒鈥濃偓芒鈥濃偓 Utilities 芒鈥濃偓芒鈥濃偓
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
    "pandas-stubs>=2.1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# 芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓
# Ruff Configuration
# 芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓
[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (needed for FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# 芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓
# Mypy Configuration
# 芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "fredapi.*",
    "confluent_kafka.*",
    "airflow.*",
    "xgboost.*",
    "optuna.*",
    "transformers.*",
]
ignore_missing_imports = true

# 芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓
# Pytest Configuration
# 芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓芒鈥濃偓
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
